# Vindex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pdm-python  .pylintrc  Dockerfile  LICENSE  README.md  compose.yml  crowdin.yml  pyproject.toml
.github/workflows/: download_crowdin.yml  upload_crowdin.yml
prisma/: partial_types.py  schema.prisma
src/vindex/: __init__.py  __main__.py  _utils.py  settings.py
src/vindex/cli/: README.md  __init__.py  utils.py
src/vindex/cli/commands/: delete.py  edit.py  list.py  setup.py  start.py  updateenv.py
src/vindex/cli/commands/dev/: localegenerate.py  updateenv.py
src/vindex/cogs/dev/: __init__.py  core.py
src/vindex/cogs/dev/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/cogs/falx/: __init__.py  core.py  messages.py
src/vindex/cogs/globalprofile/: __init__.py  components.py  core.py
src/vindex/cogs/owner/: core.py
src/vindex/cogs/owner/locales/: en.po  fr.po  ja.po  no.po  pl.po  zh.po
src/vindex/constants/: modules.py
src/vindex/core/: __init__.py  bot.py  checks.py  core_types.py  i18n.py  types.py
src/vindex/core/cogs/: server_settings.py
src/vindex/core/cogs/admin/: __init__.py  core.py  messages.py
src/vindex/core/cogs/core/: __init__.py  corecmd.py
src/vindex/core/cogs/core/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/core/cogs/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/core/cogs/meta/: __init__.py  core.py
src/vindex/core/cogs/owner/: __init__.py  core.py  messages.py
src/vindex/core/creator/: __init__.py  model.py  reader.py
src/vindex/core/creator/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/core/defintions/: __init__.py
src/vindex/core/exceptions/: base.py  invalid_creator.py
src/vindex/core/exceptions/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/core/extensions/: __init__.py  events.py
src/vindex/core/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/core/services/: authorization.py  blacklist.py  cogs_manager.py  i18n.py  proto.py  provider.py
src/vindex/core/services/locales/: af.po  de.po  en.po  es.po  fr.po  it.po  ja.po  nl.po  no.po  pl.po  ro.po  ru.po  zh.po
src/vindex/core/ui/: formatting.py  prompt.py  tools.py
src/vindex/core/ui/locales/: en.po  es.po  fr.po  it.po  ja.po  no.po  ro.po
src/vindex/core/utils/: __init__.py  formatting.py  prompt.py
src/vindex/core/utils/locales/: af.po  de.po  fr.po  nl.po  pl.po  ru.po  zh.po
(+13 files in other folders)
